--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
-  },
-  "dependencies": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "predeploy": "npm run build",
+"deploy": "gh-pages -d dist"
+},
+"dependencies": {
     "emailjs-com": "^3.2.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
@@ -20,7 +20,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
-    "@types/react": "^18.3.23",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
@@ -35,5 +35,5 @@
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
   },
-  "sisenco_travels": "https://github.com/manurah/sisenco_travels.git"
+  "homepage": "https://github.com/manurah/sisenvo_travels.git"
 }
